[package]
name = "graphsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
ipld_traversal = { path = "./traversal", default_features = false }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_repr = "0.1"
serde_ipld_dagcbor = "0.2.2"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
libp2p = "0.46.1"
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
libipld = { version = "0.13.1", features = ["serde-codec"] }
deque = "0.3.2"
thiserror = "1.0"
smallvec = "1.9.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
clap = { version = "3.2.18", features = ["derive"] }

[workspace]
members = [
  "traversal"
]

[[example]]
name = "cmd_api"
