[package]
name = "graphsync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of the GraphSync wire protocol"
repository = "https://github.com/myelnet/rs-graphsync"

[dependencies]
anyhow = "1.0.51"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
ipld_traversal = { path = "./traversal", version = "0.1.0", default_features = false }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_repr = "0.1"
serde_ipld_dagcbor = "0.2.2"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
libp2p = { version = "0.46.1", features = ["wasm-ext"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
libipld = { version = "0.13.1", features = ["serde-codec"] }
thiserror = "1.0"
smallvec = "1.9.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
clap = { version = "3.2.18", features = ["derive"] }
criterion = { version = "0.3", features = ["async_futures", "async_std"] }

[workspace]
members = [
  "traversal",
  "libp2p-wasm-ws",
  "examples/wasm",
]

[[example]]
name = "data_transfer"

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "traversal"
harness = false
