[package]
name = "ipld_traversal"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Implementation of IPLD selectors and traversal methods"
repository = "https://github.com/retrieval-markets-lab/rs-graphsync"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libipld = { version = "0.15.0", features = ["serde-codec"] }
serde_ipld_dagcbor = "0.1.2"
indexmap = { version = "1.8.0", features = ["serde"] }
smallvec = "1.8.0"
thiserror = "1.0"
unixfs-v1 = "0.2.1"
integer-encoding = { version = "3.0", default-features = false }
anyhow = "1.0.51"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"

