[package]
name = "graphsync-wasm-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.24"
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
ipld_traversal = { path = "../../traversal", default_features = false }
libipld = { version = "0.13.1", features = ["serde-codec"] }

[dependencies.web-sys]
version = "0.3.59"
features = []
