[package]
name = "graphsync-wasm-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.24"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
ipld_traversal = { path = "../../traversal", default_features = false }
graphsync = { path = "../../" }
libipld = { version = "0.15.0", features = ["serde-codec"] }
libp2p = { version = "0.50", default_features = true, features = ["mplex", "noise", "async-std"] }
libp2p_wasm_ws = { path = "../../libp2p-wasm-ws" }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rustls = "0.20.7"

[dependencies.web-sys]
version = "0.3.59"
features = []
